--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,8 @@ header {
   text-align: center;
 }
 
+
+
 h2 {
   font-size: 40px;
  
@@ -103,7 +105,7 @@ p {
 .hero-banner {
   height: 250px;
 
-  background-image: url('../images/02-Portfolio-1.jpg');
+  background-image: url('../images/02-portfolio-1.jpg');
   background-size: cover;
 }
 
@@ -137,6 +139,7 @@ p {
   padding: 10px;
   flex: 75%;
 }
+
 
 /* Responsive layout - makes a one column-layout instead of a two-column layout */
 @media (max-width: 800px) {
